# learn-opengl-cxx

./: CMakeLists.txt  README.md
src/: fragment.glsl  main.cpp  shader.cpp  shader.hpp
